# nashome

./: .gitignore  README.md  cleanup-recordings.py  create-movie.py  create-oldfilename.py  download-youtube.py  episodes_events.json  fix-mp3.py  fix-photos.py  join-images.py  parseml.py  pyproject.toml  rename-serien.py  requirements.txt  sort-photos.py
data/episodes/: episodes_events.json  movie_titles.json  season_numbering.xlsx
src/nashome/: __init__.py
src/nashome/_cmd/: autocut.py  autosplit.py  cleanup_recordings.py  convert_movie.py  create_movie.py  download_youtube.py  fix_photos.py  join_images.py  pipeline_autocut.py  sync_audio.py  sync_savegames.py
src/nashome/config/: config_sample.py
src/nashome/episodes/: app.py  collect_events.py  excel_utils.py
src/nashome/episodes/templates/: episodes.html
src/nashome/in_progress/: episode_utils.py  episodes.py  reformat-date.py  rename-files.py  rename-rechnungen.py
src/nashome/in_progress/templates/: episodes.html
src/nashome/photos/: img_filename_pattern.py  photo_handler.py
src/nashome/savegames/: savegame_handler.py
src/nashome/utils/: constants.py  eit.py  movie.py  pipeline.py  renamer.py  series.py
src/nashome/youtube/: constants.py  database.py  downloader.py  language.py  pytube_handler.py  renamer.py  youtube_handler.py
